# nirs4all-providers

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSING.md  README.md  SECURITY.md  index.html  pyproject.toml  robots.txt  site.webmanifest  sitemap.xml
.github/workflows/: ci.yml  pages.yml  publish.yml  version-guard.yml
assets/brand/: README.md
scripts/: ci_gate.py  validate_contracts.py
src/nirs4all_providers/: __init__.py  _adapter.py  _softimport.py  base.py  benchmarks.py  contracts.py  datasets.py  local_release_gate.py  papers.py  registry.py  release_gate.py  repository.py  version_sync.py
src/nirs4all_providers/contracts/: dataset_card.v2.schema.json  dataset_manifest.v2.schema.json  pipeline_descriptor.v1.schema.json  provider_descriptor.v1.schema.json  repository_index.v1.schema.json
src/nirs4all_providers/contracts/fixtures/: dataset_card.example.json  dataset_manifest.example.json  pipeline_descriptor.example.json  provider_descriptor.example.json  repository_index.example.json
tests/: conftest.py  test_base.py  test_benchmarks_provider.py  test_conformance.py  test_contracts.py  test_datasets_provider.py  test_local_release_gate.py  test_papers_provider.py  test_registry.py  test_release_gate.py  test_repository_health.py  test_repository_provider.py  test_softimport.py  test_version_sync.py
tests/e2e/: test_dataset_provider_repository_roundtrip.py
