[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nirs4all-providers"
# Version is single-sourced from src/nirs4all_providers/__init__.py (__version__).
dynamic = ["version"]
description = "Dependency-light, soft-importing provider clients over the nirs4all ecosystem's optional data/pipeline/benchmark/paper repositories."
authors = [
    { name = "Gregory Beurier", email = "beurier@cirad.fr" },
]
maintainers = [
    { name = "Gregory Beurier", email = "gregory.beurier@cirad.fr" },
]
readme = "README.md"
license = "CeCILL-2.1 OR AGPL-3.0-or-later"
license-files = ["LICENSE", "LICENSES/*.txt"]
keywords = ["nirs4all", "providers", "plugins", "datasets", "repository", "benchmarks", "papers"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.11"
# The contract + registry layer is pure standard library (importlib, dataclasses, enum, typing).
# Each backing provider is an OPTIONAL extra, soft-imported; an absent extra degrades to
# health().available == False rather than an ImportError. The base install stays minimal.
dependencies = []

[project.optional-dependencies]
# Backing repos. Each is soft-imported; install only what you consume.
datasets = ["nirs4all-datasets>=0.3.4"]
repository = ["nirs4all-repository>=0.1.4"]
benchmarks = ["nirs4all-benchmarks>=0.1.2"]
papers = ["nirs4all-papers>=0.2.1"]
# Optional bridge backing for the soft `DatasetProvider.to_dataset_package` pass-through. Soft-imported
# like every other extra; absent => the bridge raises a clear ProviderUnavailable, never an ImportError.
io = ["nirs4all-io>=0.1.5"]
# Everything at once. This installs the provider backings only. Bridge extras owned by those
# backings remain explicit, for example `nirs4all-datasets[nirs4all]` when callers need
# `DatasetProvider.to_spectro_dataset()`. This package never imports nirs4all itself and must not pin it.
all = [
    "nirs4all-datasets>=0.3.4",
    "nirs4all-repository>=0.1.4",
    "nirs4all-benchmarks>=0.1.2",
    "nirs4all-papers>=0.2.1",
    "nirs4all-io>=0.1.5",
]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/GBeurier/nirs4all-providers"
Repository = "https://github.com/GBeurier/nirs4all-providers"
Issues = "https://github.com/GBeurier/nirs4all-providers/issues"

[project.scripts]
nirs4all-providers-release-gate = "nirs4all_providers.release_gate:main"
nirs4all-providers-local-release-gate = "nirs4all_providers.local_release_gate:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nirs4all_providers*"]

[tool.setuptools.package-data]
nirs4all_providers = ["py.typed", "contracts/*.schema.json", "contracts/fixtures/*.json"]

[tool.setuptools.dynamic]
version = { attr = "nirs4all_providers.__version__" }

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
# CI checks out GBeurier/nirs4all-ecosystem into ./nirs4all-ecosystem for the canonical
# contracts gate (see scripts/ci_gate.py). That sibling repo is not ours to lint, so keep
# `ruff check .` scoped to this package and off the vendored checkout.
extend-exclude = ["nirs4all-ecosystem"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
files = ["src/nirs4all_providers"]
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["nirs4all_providers"]
omit = ["*/tests/*"]
